--- a/app/src/main/res/layout/student_list_layout.xml
+++ b/app/src/main/res/layout/student_list_layout.xml
@@ -5,26 +5,8 @@
     android:orientation="horizontal">
 
     <TextView
-        android:id="@+id/tvlistid"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1" />
-
-    <TextView
         android:id="@+id/tvlistfname"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1" />
-
-    <TextView
-        android:id="@+id/tvlistlname"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1" />
-
-    <TextView
-        android:id="@+id/tvlistmname"
-        android:layout_width="wrap_content"
+        android:layout_width="318dp"
         android:layout_height="wrap_content"
         android:layout_weight="1" />
 
